[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Levels/Pseudocode/History.gd" type="Script" id=1]
[ext_resource path="res://Game/Backgrounds/RandomBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Panels/Panel2.png" type="Texture" id=3]
[ext_resource path="res://Game/Buttons/TopicButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Buttons/Commons/Back.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]

resource_name = "show"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 192, -624 ), Vector2( 192, 96 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, -4, 1 ),
"update": 0,
"values": [ Vector2( -144, 576 ), Vector2( -144, 576 ), Vector2( 16, 576 ) ]
}

[node name="History" type="Node" index="0"]
script = ExtResource( 1 )

[node name="RandomBackground" parent="." index="0" instance=ExtResource( 2 )]

[node name="Panel" type="NinePatchRect" parent="." index="1"]
self_modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = -984.0
margin_right = 608.0
margin_bottom = -392.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 85
patch_margin_top = 85
patch_margin_right = 85
patch_margin_bottom = 85
axis_stretch_horizontal = 2
axis_stretch_vertical = 1
_sections_unfolded = [ "Axis Stretch", "Patch Margin", "Rect" ]
__meta__ = {
"_edit_group_": true
}

[node name="Margin" type="MarginContainer" parent="Panel" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 40.0
margin_right = -20.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Scroll" type="ScrollContainer" parent="Panel/Margin" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1016.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Mouse", "Scroll" ]

[node name="Grid" type="GridContainer" parent="Panel/Margin/Scroll" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 804.0
margin_bottom = 680.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 2
_sections_unfolded = [ "Mouse" ]

[node name="Cap1" parent="Panel/Margin/Scroll/Grid" index="0" instance=ExtResource( 4 )]
margin_right = 400.0
margin_bottom = 224.0
disabled = true

[node name="Label" parent="Panel/Margin/Scroll/Grid/Cap1" index="0"]
text = "Introducci√≥n"

[node name="Cap2" parent="Panel/Margin/Scroll/Grid" index="1" instance=ExtResource( 4 )]
margin_left = 404.0
margin_right = 804.0
margin_bottom = 224.0
disabled = true

[node name="Label" parent="Panel/Margin/Scroll/Grid/Cap2" index="0"]
text = "Programar"

[node name="Cap3" parent="Panel/Margin/Scroll/Grid" index="2" instance=ExtResource( 4 )]
editor/display_folded = true
margin_top = 228.0
margin_right = 400.0
margin_bottom = 452.0
disabled = true

[node name="Label" parent="Panel/Margin/Scroll/Grid/Cap3" index="0"]
text = "Lenguajes"

[node name="Cap4" parent="Panel/Margin/Scroll/Grid" index="3" instance=ExtResource( 4 )]
editor/display_folded = true
margin_left = 404.0
margin_top = 228.0
margin_right = 804.0
margin_bottom = 452.0
disabled = true

[node name="Label" parent="Panel/Margin/Scroll/Grid/Cap4" index="0"]
text = "Algoritmo"

[node name="Cap5" parent="Panel/Margin/Scroll/Grid" index="4" instance=ExtResource( 4 )]
margin_top = 456.0
margin_right = 400.0
margin_bottom = 680.0
disabled = true

[node name="Label" parent="Panel/Margin/Scroll/Grid/Cap5" index="0"]
text = "Variables"

[node name="Back" parent="." index="2" instance=ExtResource( 5 )]
margin_left = -143.913
margin_right = -18.9132
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="Anim" type="AnimationPlayer" parent="." index="3"]
root_node = NodePath("..")
autoplay = "show"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/show = SubResource( 1 )
blend_times = [  ]

[connection signal="pressed" from="Panel/Margin/Scroll/Grid/Cap1" to="." method="_on_Cap1_pressed"]
[connection signal="pressed" from="Panel/Margin/Scroll/Grid/Cap2" to="." method="_on_Cap2_pressed"]
[connection signal="pressed" from="Panel/Margin/Scroll/Grid/Cap3" to="." method="_on_Cap3_pressed"]
[connection signal="pressed" from="Panel/Margin/Scroll/Grid/Cap4" to="." method="_on_Cap4_pressed"]
[connection signal="pressed" from="Panel/Margin/Scroll/Grid/Cap5" to="." method="_on_Cap5_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]

[editable path="Panel/Margin/Scroll/Grid/Cap1"]

[editable path="Panel/Margin/Scroll/Grid/Cap2"]

[editable path="Panel/Margin/Scroll/Grid/Cap3"]

[editable path="Panel/Margin/Scroll/Grid/Cap4"]

[editable path="Panel/Margin/Scroll/Grid/Cap5"]
